# python_exam

./: check_cuda.py  pyproject.toml
